<resources>
    <string name="app_name">Red Revo Raise</string>
    <string name="undo">Undo</string>

    <string name="select_1">1 D</string>
    <string name="select_2">5 D</string>
    <string name="select_3">1 M</string>
    <string name="select_4">6 M</string>
    <string name="select_5">YTD</string>
    <string name="select_6">1 Y</string>
    <string name="select_7">5 Y</string>
    <string name="select_8">MAX</string>

    <string name="watchlist_on">Following</string>
    <string name="watchlist_off">Watchlist</string>
    <string name="watchlist_on_confirm">Added to watchlist</string>
    <string name="watchlist_off_confirm">Removed from watchlist</string>
    <string name="watchlist_header">Watching</string>
    <string name="stocks_header">Companies</string>

    <string-array name="sortBy">
        <item>Name</item>
        <item>Price</item>
    </string-array>
    <string-array name="upDown">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
</resources>