<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="background">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <com.google.android.material.chip.ChipGroup
            style="@style/Widget.MaterialComponents.ChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            app:checkedChip="@id/select_1"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/select_1"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/select_2"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/select_3"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_3" />

            <com.google.android.material.chip.Chip
                android:id="@+id/select_4"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_4" />

            <com.google.android.material.chip.Chip
                android:id="@+id/select_5"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_5" />

            <com.google.android.material.chip.Chip
                android:id="@+id/select_6"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_6" />

            <com.google.android.material.chip.Chip
                android:id="@+id/select_7"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_7" />

            <com.google.android.material.chip.Chip
                android:id="@+id/select_8"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_8" />


        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/companyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tesla"
                android:textFontWeight="700"
                android:textColor="@color/colorAccent"
                android:textSize="32sp"
                android:transitionName="ticker" />

            <TextView
                android:id="@+id/companyRegionScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="US probably, who cares"
                android:transitionName="region" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currentPriceScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="$1014.97"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/priceDifferenceScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="-69.63 (-6.42%)"
                android:textColor="@color/colorAccent"
                android:textFontWeight="300"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <ViewFlipper
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</RelativeLayout>